# Gather_Grow

./: .dockerignore  .gitignore  Dockerfile  README.md  coverage.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
apps/chat/: admin.py  consumers.py  models.py  routing.py  tests.py  urls.py
apps/chat/migrations/: 0001_initial.py  0002_chatmessage_image_alter_chatmessage_message.py  0002_initial.py  0003_alter_chatmessage_image.py  0003_initial.py
apps/chat/serializers/: message_serializer.py
apps/chat/services/: message_service.py
apps/chat/views/: message_views.py
apps/common/: permissions.py  responses.py
apps/communitys/: admin.py  apps.py  models.py  tests.py  urls.py
apps/communitys/migrations/: 0001_initial.py  0002_initial.py
apps/communitys/serializers/: answer_serializer.py  question_serializer.py
apps/communitys/services/: answer_service.py  question_service.py
apps/communitys/views/: answer_views.py  question_views.py
apps/gatherings/: admin.py  apps.py  models.py  tests.py  urls.py
apps/gatherings/migrations/: 0001_initial.py  0002_initial.py
apps/gatherings/serializers/: category_serializer.py  gathering_serializer.py  member_serializer.py
apps/gatherings/views/: category_views.py  (+2 more)
apps/templates/: email_template.html  password_reset_email.html
apps/users/: admin.py  authentication.py  models.py  tests.py  urls.py
config/: asgi.py  settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
resources/nginx/: Dockerfile  nginx.conf
scripts/: formatter.sh
social_login_test/: index.html
(+21 files in other folders)
